--- a/docs/reference/identity.adoc
+++ b/docs/reference/identity.adoc
@@ -1,6 +1,6 @@
 = Mmadu Identity Provider Documentation
 Oyudo Gerald <gerald.oyudo@gmail.com>
-v2.0.0, 2020-06-26
+v2.0.1-SNAPSHOT, 2020-06-26
 :toc:
 :sectnums:
 :showtitle:
