--- a/docs/reference/identity.adoc
+++ b/docs/reference/identity.adoc
@@ -6,7 +6,7 @@ v2.0.1-SNAPSHOT, 2020-06-26
 :showtitle:
 :page-navtitle: Mmadu Identity Provider Reference
 :page-excerpt:
-:page-root: ../
+:page-root:
 :imagesdir: {page-root}/images
 :permalink: /:title/
 :page-layout: reference
