--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -27,6 +27,12 @@ Open ID and others. Mmadu aims to provide all the tools needed developers to imp
 
 To help developers (*of all walks of life*) eliminate user-management coding in applications forever.
 
+== What's New in 2.0.1?
+
+. Implemented Implicit and Password Grant Types
+. Added username field to user token
+. Updated Documentation
+
 == Current Features
 
 . Multi-tenancy using Domains
