prepared for 2.0.2 development

--- a/docs/reference/api-documentation.adoc
+++ b/docs/reference/api-documentation.adoc
@@ -1,6 +1,6 @@
 = Api Convention Reference
 Oyudo Gerald <gerald.oyudo@gmail.com>
-v2.0.1, 2020-06-26
+v2.0.2-SNAPSHOT, 2020-06-26
 :toc:
 :sectnums:
 :showtitle:
