--- a/docs/guides/creating-your-first-domain.adoc
+++ b/docs/guides/creating-your-first-domain.adoc
@@ -334,7 +334,7 @@ We use the client_credentials grant flow to obtain an access token with the cred
 [source,http]
 ----
 POST /clients/token HTTP/1.1
-Host: 192.168.99.100:15553
+Host: localhost:15553
 Authorization: Basic bXkuYXBwLmFkbWluOjEyMzQ1Njc4OTA=
 Content-Type: application/x-www-form-urlencoded
 
@@ -515,21 +515,30 @@ Make a `POST /domains` request to the registration service below:
 [source,http,options="nowrap"]
 ----
 POST /domains HTTP/1.1
-Content-Type: application/json
+Host: localhost:15551
 Authorization: Bearer <token>
-Host: localhost:15552
+Content-Type: application/json
 
 {
   "domains": [
     {
       "domainId": "my-app",
-      "registrationProfile": {
-        "defaultRedirectUrl": "https://localhost.8080",
-        "headerOne": "My App",
-        "headerThree": "Register",
-        "instruction": "Fill all the fields to register",
-        "submitButtonTitle": "GO!!"
-      },
+      "registrationProfiles": [
+        {
+          "defaultRedirectUrl": "https://localhost.8080",
+          "headerOne": "My App",
+          "headerThree": "Register",
+          "instruction": "Fill all the fields to register",
+          "submitButtonTitle": "GO!!",
+          "code": "user",
+          "fields": [
+            "app.email",
+            "app.username",
+            "app.country",
+            "app.password"
+          ]
+        }
+      ],
       "fields": [
         {
           "name": "email",
@@ -537,6 +546,7 @@ Host: localhost:15552
           "property": "email",
           "fieldTypeId": "mmadu.fields.email",
           "label": "Email",
+          "code": "app.email",
           "order": 1,
           "required": true
         },
@@ -547,6 +557,7 @@ Host: localhost:15552
           "fieldTypeId": "mmadu.fields.text",
           "label": "Country",
           "order": 2,
+          "code": "app.country",
           "required": true
         },
         {
@@ -556,6 +567,7 @@ Host: localhost:15552
           "fieldTypeId": "mmadu.fields.text",
           "label": "Username",
           "order": 3,
+          "code": "app.username",
           "required": true
         },
         {
@@ -564,6 +576,7 @@ Host: localhost:15552
           "property": "password",
           "fieldTypeId": "mmadu.fields.password",
           "label": "Password",
+          "code": "app.password",
           "order": 4
         }
       ]
@@ -575,7 +588,7 @@ Host: localhost:15552
 When that's done, we can now register new users by going to the registration link
 
 ----
-http://localhost:15553/my-app/register
+http://localhost:15551/my-app/register/user
 ----
 
 image::images/registration_screen.PNG[]
