--- a/docs/apis/snippets/domain-flow-configuration-documentation/get-all-domain-flow-configurations/1/http-response.adoc
+++ b/docs/apis/snippets/domain-flow-configuration-documentation/get-all-domain-flow-configurations/1/http-response.adoc
@@ -11,22 +11,54 @@ Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 1138
+Content-Length: 2727
 
 {
   "_embedded" : {
     "domainFlowConfigurations" : [ {
       "domainId" : "0",
+      "theme" : {
+        "logoSvg" : "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"172\" height=\"91\" viewBox=\"-52 -53 100 100\" stroke-width=\"2\"><g fill=\"none\"><ellipse stroke=\"#66899a\" rx=\"6\" ry=\"44\"/><ellipse stroke=\"#e1d85d\" rx=\"6\" ry=\"44\" transform=\"rotate(-66)\"/><ellipse stroke=\"#80a3cf\" rx=\"6\" ry=\"44\" transform=\"rotate(66)\"/><circle stroke=\"#4b541f\" r=\"44\"/></g><g fill=\"#66899a\" stroke=\"white\"><circle fill=\"#80a3cf\" r=\"13\"/><circle cy=\"-44\" r=\"9\"/><circle cx=\"-40\" cy=\"18\" r=\"9\"/><circle cx=\"40\" cy=\"18\" r=\"9\"/></g></svg>",
+        "themeColour" : {
+          "primary" : "lightcoral",
+          "secondary" : "darkslateblue",
+          "info" : "aliceblue",
+          "primaryDark" : "#d07070",
+          "primaryDarkest" : "#c06060",
+          "secondaryDark" : "#39306f",
+          "secondaryDarkest" : "#2b2453",
+          "danger" : "darkred",
+          "dangerText" : "white",
+          "success" : "#2b8378",
+          "successText" : "black"
+        }
+      },
       "_links" : {
         "self" : {
-          "href" : "http://localhost:8080/repo/domainFlowConfigurations/5f095d92b969613dad89523c"
+          "href" : "http://localhost:8080/repo/domainFlowConfigurations/5f2cfd62830e9b2c14dadc1a"
         },
         "domainFlowConfiguration" : {
-          "href" : "http://localhost:8080/repo/domainFlowConfigurations/5f095d92b969613dad89523c"
+          "href" : "http://localhost:8080/repo/domainFlowConfigurations/5f2cfd62830e9b2c14dadc1a"
         }
       }
     }, {
       "domainId" : "1234",
+      "theme" : {
+        "logoSvg" : null,
+        "themeColour" : {
+          "primary" : "#007D76",
+          "secondary" : "#E6354C",
+          "info" : "#53FCE6",
+          "primaryDark" : "#005752",
+          "primaryDarkest" : "rgba(38, 145, 139, 0.5)",
+          "secondaryDark" : "#ce1a31",
+          "secondaryDarkest" : "rgba(234, 83, 103, 0.5)",
+          "danger" : "#d5d5d5",
+          "dangerText" : "#161616",
+          "success" : "##feffff",
+          "successText" : "#838584"
+        }
+      },
       "_links" : {
         "self" : {
           "href" : "http://localhost:8080/repo/domainFlowConfigurations/1"
